[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/player/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/object_player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/propulsaum.png" type="Texture" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.971264, 0.354545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../damage/shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "shot"
length = 0.2

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 9 )

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="object_player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="fly" type="CPUParticles2D" parent="."]
position = Vector2( -2, 7 )
emitting = false
lifetime = 0.6
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, 1 )
initial_velocity = 15.0
initial_velocity_random = 1.0
linear_accel = -15.0
linear_accel_random = 1.0
scale_amount_curve = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 11

[node name="damage" type="AnimationPlayer" parent="sprite"]
anims/damage = SubResource( 2 )

[node name="weapon" type="Sprite" parent="."]

[node name="Wanim" type="AnimationPlayer" parent="weapon"]
anims/shot = SubResource( 3 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="damage" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="damage"]
shape = SubResource( 5 )

[node name="feet1" type="RayCast2D" parent="."]
position = Vector2( -4, 1 )
enabled = true
cast_to = Vector2( 0, 9 )

[node name="feet2" type="RayCast2D" parent="."]
position = Vector2( 4, 1 )
enabled = true
cast_to = Vector2( 0, 9 )

[node name="shot_Pos" type="Position2D" parent="."]
position = Vector2( 10, 0 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/run = SubResource( 9 )
[connection signal="animation_finished" from="sprite/damage" to="." method="_on_damage_animation_finished"]
[connection signal="animation_finished" from="weapon/Wanim" to="." method="_on_Wanim_animation_finished"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="body_exited" from="damage" to="." method="_on_damage_body_exited"]
